@@ -1,6 +1,7 @@
 #!/bin/bash
 
-# CMD="g++ -o driver -Wall -I../ driver.cc -L../tmp -ldatetime -L../../tmp/lib -lbobcat -s"
+# CMD="g++ --std=c++0x -o driver -Wall -I../ driver.cc  -L../tmp -ldatetime -L../../tmp/lib -lbobcat -s"
+
 # CMD="g++ -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib -lbobcat -s"
 
 CMD="g++ -o driver -Wall *.cc -lbobcat -s"
