@@ -111,7 +111,7 @@
 
     // Local program library to use (change to an empty string if you want to
     // use the object modules themselves, rather than a library)
-#define LIBRARY             "datetime"
+#define LIBRARY             "errno"
 
     //  The extension of object modules:
 #define OBJ_EXT             ".o"
