@@ -1,3 +1,7 @@
+bobcat (2.04.02)    ISN
+
+  * DateTime: DST updated by setXXX() members as well.
+
 bobcat (2.04.01)
 
   * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
